infrastructure/argocd/aws/9-route.yaml
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: dev-private
  annotations:
    argocd.argoproj.io/sync-wave: "9"
spec:
  providerConfigRef:
    name: aws-provider  # This line points to your specific ProviderConfig
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: dev-nat
    region: us-east-1
    routeTableIdRef:
      name: dev-private
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: dev-public
  annotations:
    argocd.argoproj.io/sync-wave: "9"
spec:
  providerConfigRef:
    name: aws-provider  # This line points to your specific ProviderConfig
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: dev-igw
    region: us-east-1
    routeTableIdRef:
      name: dev-public
